# lunch-and-learn-docker

./: .gitignore  README.md  docker-compose.yml
backend/: Cargo.toml  Dockerfile
backend-node/: Dockerfile  README.md  package.json
backend-node/src/: application.ts  index.ts  migrate.ts  openapi-spec.ts
backend-node/src/__tests__/acceptance/: home-page.acceptance.ts  ping.controller.acceptance.ts  test-helper.ts
backend-node/src/controllers/: user.controller.ts
backend-node/src/datasources/: db.datasource.ts
backend-node/src/models/: user-entity.model.ts  user-response.model.ts
backend-node/src/repositories/: user-entity.repository.ts
backend-rust/: Dockerfile
backend-rust/src/database/: mod.rs
backend-rust/src/greet/: controller.rs  mod.rs
backend-rust/src/greet/dao/: mod.rs
backend/src/: main.rs
backend/src/database/: mod.rs
backend/src/greet/: controller.rs  mod.rs
backend/src/greet/dao/: users.rs
backend/src/greet/models/: mod.rs  user_info.rs
database/: construct.sh  dump.sql
frontend/: package.json
frontend/src/app/: app-routing.module.ts  app.component.pug  app.component.scss  app.component.ts  app.module.ts
frontend/src/app/home/: home.component.pug  home.component.ts
frontend/src/app/model/: NavItem.ts
frontend/src/app/nav/: nav.component.pug  nav.component.scss  nav.component.ts
frontend/src/app/users/: users.component.pug  users.component.scss  users.component.ts
frontend/src/environments/: environment.prod.ts
