[package]
name = "full-stack-app-docker"
version = "0.1.0"
authors = ["Jonathan Lavigne"]
edition = "2018"
description = "Une application backend simple en rust pour le lunch&learn de techso 'docker pour une application full-stack'"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# Actix - web framework
actix-web = "2.0"
actix-rt = "1.0"

# JSON Serialization / Deserialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"